work on every page. mostly functional with some small techincally errors

--- a/PattyNallScoot.html
+++ b/PattyNallScoot.html
@@ -47,31 +47,28 @@
 -->
 
 
-    <p class = "huge"> Lauren Bunting </p>
+    <p class = "huge"> Patty Nall Scott </p>
     <br>
     <br>
+<!--
+    <img src="photos/projects/scottOne.jpg" alt="donut sculpture" class="center">
 
-    <img src="photos/projects/buntingOne.jpeg" alt="Mime Sculpture" class="center">
+    <p class = "title"> Blessings </p>
+      <p> Isaiah 44: 3,4
+For I will pour water upon him that is thirsty, and floods upon the dry ground: I will pour out my spirit upon thy offspring and my blessing upon thine descendants. And they shall spring up as (flowers) among the grass as willows by the water courses.
 
-    <p class = "title"> Mime Your Own Business </p>
-      <p> Gloves. Facepaint. Unspeakable Acts. Mimes are theatrical characters that are notoriously known for getting themselves into sticky situations. Of course, most of us have caught them in the act of being stuck in a box. These boxes however are invisible to the viewer’s eye and leave the mime that they contain at a slight disadvantage. It is unknown what these speechless characters have done to deserve such punishment or how they will escape. What are they hiding behind the facepaint and gloves? We may never know. But one thing I know for sure: Whatever you do, stay away from boxes. ​</p>
+Through scripture I am fully persuaded, what God has promised to his people he will perform. I hold onto this belief in the good times and dry times and pray for God’s blessings of peace, comfort and joy through the Holy Spirit for myself, my children, my children’s children and their descendants. ​</p>
     <h4> Comments </h4>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <img src="photos/projects/buntingTwo.jpeg" alt="Dark Hallway Sculpture" class="center">
+-->
 
 
-    <p class = "title"> Wait, I Can't See </p>
-      <p> It is a common fear to be afraid of the dark when we are younger. Light is a safe haven, where the dark is not. The darkness leaves you incapacitated, visionless, and unsure of what lies just two feet in front of you. It seems almost crazy to submit oneself into the darkness without any source of light. With this idea in mind, we decided to create an interactive piece that manipulates darkness in a way that catches the audience by surprise. You are welcome to enter our piece and experience this idea for yourself. Please watch your step. ​</p>
+    <img src="photos/projects/scottTwo.jpg" alt="bloody shower sculpture" class="center">
+
+
+    <p class = "title"> Storms of Life </p>
+      <p> The crocheted tornadoes represent the physical, emotional and natural storms that we will all experience throughout our lifetime, but do not be discouraged, we are not without hope. For the Bible tells us of the many times that God provided protection for his people from natural storms. While we seek shelter from physical storms today, we can look to scripture for encouraging words during the symbolic storms of our life. Times of grief and despair can be represented by storms as moments to endure until the days of happiness and safety arrive. The Bible provides wisdom and guidance to get through the storms of life and follow the path of God through difficult times. ​</p>
     <h4> Comments </h4>
-
+    <h4>The intricate detail put into each tornado is truly incredible. Looking at them up close really puts it into perspective how much time and hard work it would take to make them. I think the meaning behind this piece is beautiful and something that many can relate with. Great work.</h4>
     <br>
     <br>
     <br>
