--- a/ashlynGarret.html
+++ b/ashlynGarret.html
@@ -47,14 +47,18 @@
 -->
 
 
-    <p class = "huge"> Lauren Bunting </p>
+    <p class = "huge"> Ashlyn Garret </p>
     <br>
     <br>
 
-    <img src="photos/projects/buntingOne.jpeg" alt="Mime Sculpture" class="center">
+    <img src="photos/projects/garretOne.jpg" alt="donut sculpture" class="center">
 
-    <p class = "title"> Mime Your Own Business </p>
-      <p> Gloves. Facepaint. Unspeakable Acts. Mimes are theatrical characters that are notoriously known for getting themselves into sticky situations. Of course, most of us have caught them in the act of being stuck in a box. These boxes however are invisible to the viewer’s eye and leave the mime that they contain at a slight disadvantage. It is unknown what these speechless characters have done to deserve such punishment or how they will escape. What are they hiding behind the facepaint and gloves? We may never know. But one thing I know for sure: Whatever you do, stay away from boxes. ​</p>
+    <p class = "title"> i donut care </p>
+      <p> The assignment for this sculpture was simply “box”. The first thing that came to my mind was a box of food. I played around with the idea of doing sushi or a pizza, but I decided to do donuts. They are known world-wide as coming in a box of a dozen. So, I made a box of a dozen donuts. They are all sculpted out of plaster and decorated with hot glue, paint, and actual food (the cereal, sprinkles, and oreos). Each one is very different from all the others. This is because I wanted to show how creative people can get with these delicious treats.
+​
+Yes, they look good enough to eat! But PLEASE DO NOT TOUCH!
+​
+I sincerely hope that I have made you hungry. ​</p>
     <h4> Comments </h4>
 
     <br>
@@ -65,13 +69,13 @@
     <br>
     <br>
 
-    <img src="photos/projects/buntingTwo.jpeg" alt="Dark Hallway Sculpture" class="center">
+    <img src="photos/projects/garretTwo.jpg" alt="bloody shower sculpture" class="center">
 
 
-    <p class = "title"> Wait, I Can't See </p>
-      <p> It is a common fear to be afraid of the dark when we are younger. Light is a safe haven, where the dark is not. The darkness leaves you incapacitated, visionless, and unsure of what lies just two feet in front of you. It seems almost crazy to submit oneself into the darkness without any source of light. With this idea in mind, we decided to create an interactive piece that manipulates darkness in a way that catches the audience by surprise. You are welcome to enter our piece and experience this idea for yourself. Please watch your step. ​</p>
+    <p class = "title"> Shower Murder </p>
+      <p> For as long as I can remember, my greatest fear has been being murdered in the shower. The reason for this is simple. When someone is murdered, the forensics team comes in and takes lots of pictures of every single inch of the crime scene. My problem is: you take a shower without clothes of course. If you get murdered in the shower, you die without clothes, therefore, all of those crime scene photos reflect that. Not my cup of tea. When most people think of a shower murder, they think of “Psycho” directed by Alfred Hitchcock. However, I had never even seen or barely heard of this film when I thought up this project. I wanted to capture the essence of a crime scene by building a structure resembling a shower with a murdered woman coming out of it laying on the ground in a puddle of blood. I constructed a body out of fabric and stuffing. Then I made the bottom of the shower out of tiles and wood. I build a structure from that with wood and attached a shower curtain to it and placed the body underneath the curtain on top of a puddle of blood I made from resin. After that I covered everything is blood and splatters. I finished by surrounding the whole thing with crime scene tape as they do when they arrive at a crime scene. ​</p>
     <h4> Comments </h4>
-
+    <h4>My favorite by far! Excited to see more work!</h4>
     <br>
     <br>
     <br>
