--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
 
   <body>
     <main>
-    <div class="dropdown">
-      <a href="index.html"><button type="button">Home</button></a>
-      <button class="dropbtn" onclick="dropdownFunc()">Fall 2019</button>
-      <div id="myDropdown" class="dropdown-content">
-        <a href="studentBioPage_S_F19.html">Sculpture</a>
-        <a href="studentBioPage_AS_F19.html">Ad Sculpture</a>
-      </div>
-    </div>
+      <div class = "all">
       <div class="dropdown">
-        <button class="dropbtn" onclick="dropdownFunc()">Spring 2020</button>
+        <a href="index.html"><button type="button">Home</button></a>
+      </div>
+       <div class="dropdown">
+        <button class="dropbtn" onclick="dropdownFunc()">Fall 2019</button>
         <div id="myDropdown" class="dropdown-content">
-          <a href="studentBioPage_S_S20.html">Sculpture</a>
-          <a href="studentBioPage_AS_S20">Ad Sculpture</a>
+          <a href="studentBioPage_S_F19.html">Sculpture</a>
+          <a href="studentBioPage_AS_F19.html">Ad Sculpture</a>
         </div>
       </div>
         <div class="dropdown">
-          <button class="dropbtn" onclick="dropdownFunc()">Fall 2020</button>
+          <button class="dropbtn" onclick="dropdownFunc()">Spring 2020</button>
           <div id="myDropdown" class="dropdown-content">
-            <a href="studentBioPage_S_F20.html">Sculpture</a>
-            <a href="studentBioPage_AS_F20.html">Ad Sculpture</a>
+            <a href="studentBioPage_S_S20.html">Sculpture</a>
+            <a href="studentBioPage_AS_S20">Ad Sculpture</a>
+          </div>
+        </div>
+          <div class="dropdown">
+            <button class="dropbtn" onclick="dropdownFunc()">Fall 2020</button>
+            <div id="myDropdown" class="dropdown-content">
+              <a href="studentBioPage_S_F20.html">Sculpture</a>
+              <a href="studentBioPage_AS_F20.html">Ad Sculpture</a>
+            </div>
           </div>
         </div>
 
