--- a/studentBioPage_AS_F19.html
+++ b/studentBioPage_AS_F19.html
@@ -47,7 +47,7 @@
 
  <h1>Advanced Sculpture Students Fall 2019</h1>
  <p class = "first">Click on a student to learn more about their work. These students have a lot of freedom when it comes to constructing their sculptures.</p>
-
+<!--
 <article>
   <img src="photos/KalyLynnBeedeProfile.jpg" alt="​​Kaly Lynn Beede Profile Picture">
   <section>
@@ -56,7 +56,7 @@
 comfortable and confident in their own. </p>
   </section>
 </article>
-
+-->
 
 <article>
   <img src="photos/AshtonBrownProfile.jpeg" alt="Ashton Brown Profile Picture">
@@ -73,7 +73,7 @@ comfortable and confident in their own. </p>
     <p>My name is Calley Dunnihoo and I come from a small town in Missouri called West Plains. I am a Graphic Design major who wants nothing more than to create and illustrate children's books. I am inspired by all things cutesy, colorful, and childlike. When not creating, you can find me sipping tea, petting my three cats I adore, or hunting for treasures in thrift stores.​ </p>
   </section>
 </article>
-
+<!--
 <article>
   <img src="photos/DrakeFrenchProfile.jpg" alt="​Drake French Profile Picture">
   <section>
@@ -105,7 +105,7 @@ comfortable and confident in their own. </p>
     <p>I am a graphic design major currently living in my hometown of Forrest City, Arkansas. My design work tends to be minimal and I love to use a lot of white space. This does not mean I never work elaborately—I can get very detailed in some of my traditional artworks. As of now, I am finding ways to combine graphic design and sculpture. It is a challenge that I hope will broaden my abilities as a designer.</p>
   </section>
 </article>
-
+-->
 <article>
   <img src="photos/TylerLeeProfile.jpg" alt="Tyler Lee Profile Picture">
   <section>
@@ -113,7 +113,7 @@ comfortable and confident in their own. </p>
     <p>My name is Tyler Lee. I’m a total goofball who’s obsessed with Pokémon. I’m heavily inspired by comics, manga, and anime and I’m aiming to become an illustrator and animator. My work in art typically draws from fascinating concepts that make me think about them for prolonged periods of time or from more personal ideas that are somehow a reflection of a part of me. </p>
   </section>
 </article>
-
+<!--
 <article>
   <img src="photos/KaileyMcQuayProfile.jpg" alt="Kailey McQuay Profile Picture">
   <section>
@@ -137,15 +137,15 @@ comfortable and confident in their own. </p>
     <p>Hello. I am Michael Ring and I’m a Bachelor of Fine Arts major with an emphasis in illustration. I currently reside in Lake City, Arkansas but am originally from Brockwell up near Calico Rock. While sculpture isn’t my major, I do enjoy the freedom that comes with it. The freedom to express your ideas to the fullest and get your vision across. The pieces I’m creating for this semester are my most personal and I hope everyone enjoys what they see.  </p>
   </section>
 </article>
-
+-->
 <article>
   <img src="photos/PattyNallScottProfile.jpg" alt="Patty Nall Scott Profile Picture">
   <section>
-    <h2><a href="PattyNallScott.html">Patty Nall Scott</h2></a>
+    <h2><a href="PattyNallScoot.html">Patty Nall Scott</h2></a>
     <p>I am a local studio artist with an emphasis in Sculpture at Arkansas State University. I also have an interest in Printmaking and Ceramics.  Sculpture allows me to work with a wide array of mediums; paint, clay, wood, glass, yarn, wire, plastics and found objects. The message I am trying to convey will determine the medium used. This past summer, I created a series in printmaking (screen and linoleum prints), using the domestic crocheted doily as it transcended through four generations of women in my family. Other works have been inspired by life experiences dealing with loss, health, emotional and social issues, while others have been created to recognize, honor or in memory of a person or profession. And lastly, I have created pieces inspired by nature such as the oldest tree on the ASU campus still finding life and purpose in spite of its old age and broken limbs.  In addition to my studies at ASU, I have attended the International Glass Artist conventions in Las Vegas, Nevada in two consecutive years, taking classes under a master glass mosaic artist from Australia.  </p>
   </section>
 </article>
-
+<!--
 <article>
   <img src="photos/ZhuoyanYaoProfile.jpeg" alt="Zhuoyan Yao Profile Picture">
   <section>
@@ -153,7 +153,7 @@ comfortable and confident in their own. </p>
     <p>A painter, installation artist, originally from China. Like to create artworks that release joy and peace. Into color and texture. Mostly quiet, sometimes energetic. Embracing beauty, truth and freedom.  </p>
   </section>
 </article>
-
+-->
 
 </main>
  </body>
