--- a/studentBioPage_S_S20.html
+++ b/studentBioPage_S_S20.html
@@ -43,7 +43,7 @@
        </div>
 
 
- <h1>Sculpture Students Fall 2019</h1>
+ <h1>Sculpture Students Spring 2020</h1>
  <p class = "first">Click on a student to learn more about their work. These students normally
 ​ work with the same theme, such as "Monument," or "Fear."</p>
 
@@ -87,7 +87,7 @@
     <p>Hi, I'm Madison. I'm currently studying Studio Art with an emphasis in sculpture here at Arkansas State. Throughout the past 4 years I have really pushed myself to become an artist that I am proud of. From the beginning, I have challenged myself to put personal meaning into each of my art pieces. Each art piece I create is a testimony of God's goodness in my life. When I see previous works I have created, I am immediately reminded of the season I was in, the things I overcame, and the blessings that poured over me. I hope that anyone from any walk of life can relate with my art and be inspired by it. ​ </p>
   </section>
 </article>
-<!--
+
 <article>
   <img src="photos/SarahLiepeProfile.jpg" alt="Sarah Liepe Profile Picture">
   <section>
@@ -111,7 +111,7 @@
     <p>Hello my name is Megan McClure and I am an art education major at Arkansas State University. I am from St. Louis, Missouri and I play for the A-state women’s soccer team. Besides creating art and playing soccer, I enjoy hiking, biking, and hanging out with my cat Roger! </p>
   </section>
 </article>
--->
+
 <article>
   <img src="photos/JeniPearceProfile.png" alt="Jeni Pearce Profile Picture">
   <section>
@@ -119,7 +119,7 @@
     <p>I am from Blytheville Arkansas and I am currently studying to become an art teacher. Other than attending school full-time, I am a devoted wife and mother. I started school again in 2016 after a mid-life crisis… I TURNED 30… YIKES. ​ </p>
   </section>
 </article>
-<!--
+
 <article>
   <img src="photos/JoyPeltonProfile.jpeg" alt="Joy Pelton Profile Picture">
   <section>
@@ -140,7 +140,7 @@
     <p>I am from Cave City, Arkansas, the home of the world's sweetest watermelons. I am a Studio Arts major with an emphasis in Drawing/Painting. I mainly works large-scale in oil paint, but I do smaller works in watercolor. My work focuses on the Southern convention and how it can be transformed into an empowering environment. </p>
   </section>
 </article>
--->
+
 <article>
   <img src="photos/RachealRowlandProfile.jpg" alt="Racheal Rowland Profile Picture">
   <section>
@@ -148,7 +148,7 @@
     <p>Hi! My name is Rachel and I am from Paragould, Arkansas. I am currently a junior working on a degree in studio art with an emphasis in photography. While sculpture is not my main focus in school, I enjoy working with new mediums and I am excited to incorporate my learned skills in my photography process. To view my other art, check out my Instagram page @rrowlandphotography. Thanks! </p>
   </section>
 </article>
-<!--
+
 <article>
   <img src="photos/BethAnnShadwickProfile.jpg" alt="Beth Ann Shadwick Profile Picture">
   <section>
@@ -156,7 +156,7 @@
     <p>Hey, y'all! I'm Beth Ann, and I'm from DeWitt, Arkansas. I am majoring in graphic design, but I also have a love for all things studio art. I love trying new things, and sculpture has been a new experience for me to dabble in! Feel free to leave me comments, and follow my art Instagram to keep up with more of my work: ba.creates. Thanks for visiting my profile! :)  </p>
   </section>
 </article>
--->
+
 <article>
   <img src="photos/SabrinaSturtevantProfile.jpg" alt="Sabrina Sturtevant Profile Picture">
   <section>
@@ -166,7 +166,7 @@
 I am also the creator of the webpage. If you have any constructive criticism for me, I am always open.  </p>
   </section>
 </article>
-<!--
+
 <article>
   <img src="photos/BrittanyWatersProfile.png" alt="​Brittany Waters Profile Picture">
   <section>
@@ -174,7 +174,7 @@ I am also the creator of the webpage. If you have any constructive criticism for
     <p>Hi, I am a Digital Design major at Arkansas State University. I am hoping that once I graduate, I can travel to my hearts content and learn as much as I can about the world. My family recently welcomed a dog into our home and she makes us so happy. Her name is Rainy and she is my world. </p>
   </section>
 </article>
--->
+
 
 
 </main>
